examples/java/failing/modifiers/ExpectedCurrently.java
<<<<<<< LEFT
public class Test {
||||||| BASE
class Test {
=======
static class Test {
>>>>>>> RIGHT
}